[gd_scene load_steps=47 format=3 uid="uid://k4g6cbkf6g1u"]

[ext_resource type="PackedScene" uid="uid://cmq5bq7ordgjr" path="res://UI/ui.tscn" id="1_5nnlr"]
[ext_resource type="Texture2D" uid="uid://d0baek72nt33f" path="res://ye.jpg" id="1_cgtp0"]
[ext_resource type="Texture2D" uid="uid://dhmskaoycv8ik" path="res://Circle_-_black_simple.svg.webp" id="2_4np2h"]
[ext_resource type="Script" uid="uid://b3rn4bmhpy5tp" path="res://scripts/giraffe.gd" id="3_5nnlr"]
[ext_resource type="Script" uid="uid://6muyfejx2agd" path="res://scripts/hurtplayer.gd" id="4_4np2h"]
[ext_resource type="Texture2D" uid="uid://ch0ytfvussg46" path="res://Giraffe.webp" id="4_06i16"]
[ext_resource type="AudioStream" uid="uid://ptj4k3es8qp4" path="res://bonksf.mp3" id="5_ic1wf"]
[ext_resource type="PackedScene" uid="uid://boe08j1nsmg2b" path="res://prefabs/player_body.tscn" id="6_r405y"]
[ext_resource type="Script" uid="uid://cxovqajwuebwv" path="res://scripts/reactive_text.gd" id="7_tl8b1"]
[ext_resource type="Script" uid="uid://betl1i82l8ml7" path="res://scripts/enemy_hurt_component.gd" id="8_r405y"]
[ext_resource type="Script" uid="uid://dpxqhvq5ks8de" path="res://scripts/trashbag.gd" id="10_ic1wf"]
[ext_resource type="Texture2D" uid="uid://da330djd8oj53" path="res://garbage can/GarbageWalk.png" id="12_r405y"]
[ext_resource type="Texture2D" uid="uid://bdehydvkncvnj" path="res://garbage can/GarbageAttackSet.png" id="13_tl8b1"]
[ext_resource type="Script" uid="uid://v2gb522teghv" path="res://prefabs/cheese_2.gd" id="14_h6013"]
[ext_resource type="Texture2D" uid="uid://c5nwdt6ffoeca" path="res://cheese.png" id="14_nrrmd"]
[ext_resource type="PackedScene" path="res://prefabs/spawn_point_holder.tscn" id="15_5kmqt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r43ak"]
size = Vector2(535, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4np2h"]
size = Vector2(153, 208)

[sub_resource type="Animation" id="Animation_5ialq"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.215, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.215, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_5qlgy"]
resource_name = "hurt"
length = 0.4668
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(0.215, -0.25, 0, 0.25, 0, 0.175, -0.25, 0, 0.25, 0, 0.174998, -0.25, 0, 0.25, 0, 0.290371, -0.25, 0, 0.25, 0, 0.215, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.131953, 0.133333, 0.3, 0.466667)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(0.215, -0.25, 0, 0.25, 0, 0.37, -0.25, 0, 0.25, 0, 0.254998, -0.25, 0, 0.25, 0, 0.146055, -0.25, 0, 0.25, 0, 0.215, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.131953, 0.133333, 0.3, 0.466667)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5ialq"]
_data = {
&"RESET": SubResource("Animation_5ialq"),
&"hurt": SubResource("Animation_5qlgy")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_40m2s"]
size = Vector2(390.698, 455.814)

[sub_resource type="CircleShape2D" id="CircleShape2D_5qlgy"]
radius = 354.001

[sub_resource type="CircleShape2D" id="CircleShape2D_4np2h"]
radius = 22.2036

[sub_resource type="CircleShape2D" id="CircleShape2D_tl8b1"]
radius = 42.0476

[sub_resource type="AtlasTexture" id="AtlasTexture_r405y"]
atlas = ExtResource("12_r405y")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_tl8b1"]
atlas = ExtResource("12_r405y")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_nrrmd"]
atlas = ExtResource("12_r405y")
region = Rect2(0, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_5kmqt"]
atlas = ExtResource("12_r405y")
region = Rect2(256, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_h6013"]
atlas = ExtResource("12_r405y")
region = Rect2(0, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_eir1n"]
atlas = ExtResource("12_r405y")
region = Rect2(256, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_ribj1"]
atlas = ExtResource("13_tl8b1")
region = Rect2(0, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_wy5sd"]
atlas = ExtResource("13_tl8b1")
region = Rect2(256, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_dvjfl"]
atlas = ExtResource("13_tl8b1")
region = Rect2(512, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_pk8uv"]
atlas = ExtResource("13_tl8b1")
region = Rect2(0, 768, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_eccf2"]
atlas = ExtResource("13_tl8b1")
region = Rect2(256, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_uxdgh"]
atlas = ExtResource("13_tl8b1")
region = Rect2(512, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_unbjk"]
atlas = ExtResource("13_tl8b1")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_g35av"]
atlas = ExtResource("13_tl8b1")
region = Rect2(512, 0, 256, 256)

[sub_resource type="SpriteFrames" id="SpriteFrames_pk8uv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r405y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tl8b1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nrrmd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5kmqt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h6013")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eir1n")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ribj1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wy5sd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dvjfl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pk8uv")
}],
"loop": false,
"name": &"jumpcrash",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eccf2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uxdgh")
}],
"loop": false,
"name": &"jumpfly",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_unbjk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g35av")
}],
"loop": true,
"name": &"jumpready",
"speed": 12.0
}, {
"frames": [],
"loop": true,
"name": &"jumpup",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_06i16"]
radius = 37.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r405y"]
size = Vector2(240, 72)

[sub_resource type="Animation" id="Animation_5kmqt"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_nrrmd"]
resource_name = "hover"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(-11, -0.25, 0, 0.25, 0, 12, -0.25, 0, 0.25, 0, -11, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5kmqt"]
_data = {
&"RESET": SubResource("Animation_5kmqt"),
&"hover": SubResource("Animation_nrrmd")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5kmqt"]
size = Vector2(56, 49)

[node name="Node2D" type="Node2D"]

[node name="UI" parent="." instance=ExtResource("1_5nnlr")]

[node name="Mountain" type="Sprite2D" parent="."]
position = Vector2(-251, 247)
texture = ExtResource("1_cgtp0")

[node name="StaticBody2D" type="StaticBody2D" parent="Mountain"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Mountain/StaticBody2D"]
polygon = PackedVector2Array(268, 44, 229, 14, 214, 24, 186, 3, 158, 34, 134, 35, 108, 39, 96, 47, 93, 56, 60, 46, 22, 21, -29, -35, -56, -74, -77, -97, -85, -99, -92, -97, -104, -105, -111, -108, -113, -116, -119, -124, -131, -135, -136, -135, -141, -121, -143, -108, -156, -102, -173, -86, -190, -67, -217, -33, -244, -14, -264, -1, -264, 5, -274, 7, -273, 178, 271, 179)

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2(905, 355)
scale = Vector2(3.56, 1)
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
position = Vector2(-3, 0)
shape = SubResource("RectangleShape2D_r43ak")

[node name="Sprite2D" type="Sprite2D" parent="Floor"]
scale = Vector2(0.793273, 0.032486)
texture = ExtResource("2_4np2h")

[node name="Giraffe" type="Node2D" parent="."]
script = ExtResource("3_5nnlr")

[node name="HurtPlayer" type="Area2D" parent="Giraffe"]
position = Vector2(375, 124)
script = ExtResource("4_4np2h")
damage = 1
metadata/_custom_type_script = "uid://6muyfejx2agd"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Giraffe/HurtPlayer"]
shape = SubResource("RectangleShape2D_4np2h")

[node name="AnimGiraffe" type="AnimationPlayer" parent="Giraffe"]
root_node = NodePath("../image")
libraries = {
&"": SubResource("AnimationLibrary_5ialq")
}

[node name="image" type="Sprite2D" parent="Giraffe"]
position = Vector2(475, 282)
scale = Vector2(0.215, 0.215)
texture = ExtResource("4_06i16")

[node name="HitBox" type="Area2D" parent="Giraffe"]
position = Vector2(475, 282)
scale = Vector2(0.215, 0.215)
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Giraffe/HitBox"]
shape = SubResource("RectangleShape2D_40m2s")

[node name="enemy_hurt" type="AudioStreamPlayer" parent="Giraffe" node_paths=PackedStringArray("anim")]
stream = ExtResource("5_ic1wf")
script = ExtResource("8_r405y")
anim = NodePath("../AnimGiraffe")

[node name="PlayerBody" parent="." node_paths=PackedStringArray("spawnPointHolder") instance=ExtResource("6_r405y")]
position = Vector2(284, 274)
spawnPointHolder = NodePath("../SpawnPointHolder")

[node name="Reactive Text" type="Area2D" parent="."]
position = Vector2(-220, 271)
collision_layer = 16
collision_mask = 16
script = ExtResource("7_tl8b1")

[node name="hiddenLabel" type="Label" parent="Reactive Text"]
offset_left = -137.0
offset_top = -56.0
offset_right = 163.0
offset_bottom = 71.0
text = "there once was a man from nantucket
he lived his life in a bucket
something something...

Press and hold \"W\" or \"Space\" to jump."
horizontal_alignment = 1
vertical_alignment = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Reactive Text"]
shape = SubResource("CircleShape2D_5qlgy")

[node name="HurtPlayer" type="Area2D" parent="."]
position = Vector2(192, 186)
script = ExtResource("4_4np2h")
damage = 1
metadata/_custom_type_script = "uid://6muyfejx2agd"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtPlayer"]
shape = SubResource("CircleShape2D_4np2h")

[node name="Sprite2D" type="Sprite2D" parent="HurtPlayer"]
scale = Vector2(0.08, 0.08)
texture = ExtResource("2_4np2h")

[node name="GarbageBag" type="CharacterBody2D" parent="."]
position = Vector2(999, 149)
collision_layer = 2
collision_mask = 2
script = ExtResource("10_ic1wf")

[node name="HurtPlayer" type="Area2D" parent="GarbageBag"]
script = ExtResource("4_4np2h")
damage = 1
metadata/_custom_type_script = "uid://6muyfejx2agd"

[node name="CollisionShape2D" type="CollisionShape2D" parent="GarbageBag/HurtPlayer"]
shape = SubResource("CircleShape2D_tl8b1")

[node name="Line2D" type="Line2D" parent="GarbageBag"]
top_level = true
points = PackedVector2Array(1146, 219, 793, 265)
metadata/_edit_lock_ = true

[node name="Sprite2D" type="AnimatedSprite2D" parent="GarbageBag"]
position = Vector2(0, -5)
scale = Vector2(0.39, 0.39)
sprite_frames = SubResource("SpriteFrames_pk8uv")
animation = &"jumpready"
autoplay = "default"
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="GarbageBag"]
shape = SubResource("CircleShape2D_06i16")

[node name="enemy_hurt" type="AudioStreamPlayer" parent="GarbageBag"]
stream = ExtResource("5_ic1wf")
script = ExtResource("8_r405y")

[node name="detect_player" type="Area2D" parent="GarbageBag"]
position = Vector2(1, -23)

[node name="CollisionShape2D" type="CollisionShape2D" parent="GarbageBag/detect_player"]
position = Vector2(67, 24)
shape = SubResource("RectangleShape2D_r405y")
debug_color = Color(0.943319, 0.73952, 0.900685, 0.42)

[node name="Cheese" type="Node2D" parent="."]
position = Vector2(192, 292)
metadata/_edit_group_ = true

[node name="Cheese2" type="Area2D" parent="Cheese"]
script = ExtResource("14_h6013")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Cheese/Cheese2"]
libraries = {
&"": SubResource("AnimationLibrary_5kmqt")
}
autoplay = "hover"

[node name="Sprite2D" type="Sprite2D" parent="Cheese/Cheese2"]
scale = Vector2(0.2, 0.2)
texture = ExtResource("14_nrrmd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cheese/Cheese2"]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_5kmqt")

[node name="SpawnPointHolder" parent="." instance=ExtResource("15_5kmqt")]
position = Vector2(649, 276)

[connection signal="body_entered" from="Giraffe/HurtPlayer" to="Giraffe/HurtPlayer" method="_on_body_entered"]
[connection signal="ded" from="Giraffe/enemy_hurt" to="Giraffe" method="_on_enemy_hurt_ded"]
[connection signal="player_ouchie" from="PlayerBody" to="UI" method="_on_player_body_player_ouchie"]
[connection signal="body_entered" from="Reactive Text" to="Reactive Text" method="_on_body_entered"]
[connection signal="body_exited" from="Reactive Text" to="Reactive Text" method="_on_body_exited"]
[connection signal="body_entered" from="HurtPlayer" to="HurtPlayer" method="_on_body_entered"]
[connection signal="body_entered" from="GarbageBag/HurtPlayer" to="GarbageBag/HurtPlayer" method="_on_body_entered"]
[connection signal="body_entered" from="GarbageBag/detect_player" to="GarbageBag" method="_on_detect_player_body_entered"]
[connection signal="body_entered" from="Cheese/Cheese2" to="Cheese/Cheese2" method="_on_body_entered"]
